# polars-upgrade

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  bump_version.py  pyproject.toml  requirements-dev.txt  setup.cfg  tmp.py
.github/workflows/: publish-to-pypi.yml  tox.yml
polars_upgrade/: __init__.py  __main__.py  _ast_helpers.py  _data.py  _main.py  _string_helpers.py  _token_helpers.py
polars_upgrade/_plugins/: datetime_functions.py  enable_string_cache.py  group_by.py  group_by_arguments.py  group_by_dynamic_truncate.py  list_functions.py  map_dict.py  map_groups.py  outer_coalesce.py  pivot_kwonly.py  removed_expr_arguments.py  renamed_dataframe_calls.py  renamed_dataframe_method_arguments.py  renamed_dataframe_method_values.py  renamed_dataframe_methods.py  renamed_datetime_functions.py  renamed_expr_arguments.py  renamed_expr_functions.py  renamed_list_arguments.py  renamed_list_functions.py  renamed_meta_functions.py  renamed_str_arguments.py  (+8 more)
pyupgrade/: _data.py  _main.py  _token_helpers.py
tests/: datetime_functions_test.py  enable_string_cache_test.py  group_by_arguments_test.py  group_by_dynamic_test.py  library_test.py  list_functions_test.py  map_dict_test.py  map_groups_test.py  outer_coalesce_test.py  pivot_kwonly_test.py  removed_expr_arguments_test.py  renamed_dataframe_calls_test.py  renamed_dataframe_method_arguments_test.py  renamed_dataframe_method_values_test.py  renamed_expr_arguments_test.py  renamed_expr_functions_test.py  renamed_list_arguments_test.py  renamed_list_functions_test.py  renamed_meta_functions_test.py  renamed_str_arguments_test.py  renamed_toplevel_arguments_test.py  renamed_toplevel_functions_no_args_test.py  rolling_agg_test.py  saturating_test.py  string_functions_test.py  toplevel_functions_test.py  validate_readme.py  with_row_count_test.py
(+7 files in other folders)
